updated spec and handlers for gateway
